# ESP-IDF_ESP32_MAX30003

./: test.cppcheck
example_test_logic/: DataDWT.csv  DataNormalize.csv  DataOffset.csv  RawData.csv
hello_world/main/: CMakeLists.txt  aaa.cpp  aaa.h  aaa_c_connector.cpp  aaa_c_connector.h  main.c  max30003.c  max30003.h  normalize.c
hello_world/main/wave/: cwt.c  hsfft.c  wavelib.c  wtmath.c
hello_world/model/: ModelECG.cc  ModelECGClassification.h5
hello_world_ekg/esp-idf/: CMakeLists.txt  sdkconfig  sdkconfig.old
hello_world_ekg/esp-idf/components/tfmicro/: CMakeLists.txt
hello_world_ekg/esp-idf/main/: CMakeLists.txt  main_functions.cc  model.cc
hello_world_ekg/esp-idf/main/esp/: main.cc
hello_world_ekg/esp-idf/main/max30003/: max30003.c
hello_world_ekg/esp-idf/main/signal/: aaa.cpp  aaa_c_connector.cpp  aaa_c_connector.h  normalize.h
hello_world_ekg/esp-idf/main/wifi/: rest.c  rest.h
hello_world_ekg/esp-idf/model/: ModelECG.cc  ModelECG.tflite
